--- a/DDDSample.Infra.Data/appsettings.json
+++ b/DDDSample.Infra.Data/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=teste_webmotors;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=teste_AirLiquid;Trusted_Connection=True;MultipleActiveResultSets=true",
+    
   },
   "Logging": {
     "IncludeScopes": false,
